NewArchive/9a1d24c653a398f48341ae41d43261b4-838e20b9cea24e55ff278b4a3848cfad/output
+ clang++ -Wall -pedantic main.cpp
main.cpp:5:12: warning: alias declarations are a C++11 extension [-Wc++11-extensions]
using bs = boost::dynamic_bitset<>;
           ^
main.cpp:10:50: error: expected expression
            std::istream_iterator<bs>(std::cin), {}, 
                                                 ^
1 warning and 1 error generated.
